tests/machine/x/cpp/tpch_q5.error
tests/machine/x/cpp/tpch_q5.cpp:118:12: error: ‘n’ was not declared in this scope
  118 |   decltype(n.n_name) nation;
      |            ^
tests/machine/x/cpp/tpch_q5.cpp:118:12: error: ‘n’ was not declared in this scope
tests/machine/x/cpp/tpch_q5.cpp:119:13: error: ‘l’ was not declared in this scope
  119 |   decltype((l.l_extendedprice * ((1 - l.l_discount)))) revenue;
      |             ^
tests/machine/x/cpp/tpch_q5.cpp:119:39: error: ‘l’ was not declared in this scope
  119 |   decltype((l.l_extendedprice * ((1 - l.l_discount)))) revenue;
      |                                       ^
tests/machine/x/cpp/tpch_q5.cpp:119:13: error: ‘l’ was not declared in this scope
  119 |   decltype((l.l_extendedprice * ((1 - l.l_discount)))) revenue;
      |             ^
tests/machine/x/cpp/tpch_q5.cpp:119:39: error: ‘l’ was not declared in this scope
  119 |   decltype((l.l_extendedprice * ((1 - l.l_discount)))) revenue;
      |                                       ^
tests/machine/x/cpp/tpch_q5.cpp: In lambda function:
tests/machine/x/cpp/tpch_q5.cpp:302:26: error: ‘n’ was not declared in this scope
  302 |     std::vector<decltype(n)> __items;
      |                          ^
tests/machine/x/cpp/tpch_q5.cpp:302:28: error: template argument 1 is invalid
  302 |     std::vector<decltype(n)> __items;
      |                            ^
tests/machine/x/cpp/tpch_q5.cpp:302:28: error: template argument 2 is invalid
tests/machine/x/cpp/tpch_q5.cpp:309:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  309 |         __items.push_back(n);
      |                 ^~~~~~~~~
tests/machine/x/cpp/tpch_q5.cpp: In lambda function:
tests/machine/x/cpp/tpch_q5.cpp:317:21: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  317 |       for (auto n : asia_nations) {
      |                     ^~~~~~~~~~~~
      |                     std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from tests/machine/x/cpp/tpch_q5.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
tests/machine/x/cpp/tpch_q5.cpp:317:21: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  317 |       for (auto n : asia_nations) {
      |                     ^~~~~~~~~~~~
      |                     std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
